# MyVMSTAT

./: CHANGELOG.md  Cargo.toml  LICENSE  README.ja.md  README.md
.agents/: AGENTS.md
.github/workflows/: ci.yml  release.yml
docs/: DIAGRAM.md  FOOTPRINTS.md  SPEC.md  test_report.md
src/: main.rs
