[package]
name = "MyVMSTAT"
version = "1.2.1"
edition = "2021"
authors = ["AI Studio Developer"]
description = "A dstat-like colorized vmstat simulation written in Rust with Timestamps"
license = "MIT"

[dependencies]
sysinfo = "0.30"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Threading", "Win32_Foundation"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

